k8s/local-dev/tusd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mo-gateway-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tusd-n
                port:
                  number: 1080
